Closed Bug 372236 Opened 19 years ago Closed 19 years ago

Internet Shortcut (.url) icons are now icons of Firefox instead of a page with a Firefox icon on it

Categories

(Firefox :: Shell Integration, defect)

x86
Windows XP
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: ce.ceo, Assigned: tbertels+bugzilla)

References

Details

(Keywords: verified1.8.1.4)

Attachments

(2 files, 6 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070206 Minefield/3.0a2pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070206 Minefield/3.0a2pre The default icons used for shortcuts are not documents any more, they are the actual firefox icon. Reproducible: Always Steps to Reproduce: 1. Let firefox set itself as default browser 2. 3. Actual Results: Icons change to big firefox logo Expected Results: Icons stay as or change to piece of paper with smaller firefox logo stamped on it This is a reversion that has happened in a recent build. It is still in firefox 2.0.2 and the latest nightly as of this bug's creation
the registry key: HKEY_CLASSES_ROOT\HTTP\DefaultIcon has a default value of: C:\Program Files\Minefield\firefox.exe,0 should be: C:\Program Files\Minefield\firefox.exe,1
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Internet Shortcut icons are now icons of FireFox instead of a page with a FireFox icon on it → Internet Shortcut (.url) icons are now icons of Firefox instead of a page with a Firefox icon on it
Bug 354005 seems to be culprit.
Blocks: 354005
Attached patch Restore the good icon - branch (obsolete) — Splinter Review
Assignee: nobody → tbertels
Status: NEW → ASSIGNED
Attachment #257120 - Flags: review?
Attached patch Restore the good icon - trunk (obsolete) — Splinter Review
I suspect that the FirefoxURL\DefaultIcon has also to be set to 1 instead of 0, but since this is Vista related, I can't test it.
Flags: blocking1.8.1.3?
Attachment #257120 - Flags: review? → review?(robert.bugzilla)
Comment on attachment 257120 [details] [diff] [review] Restore the good icon - branch The installer will also need to be patched in several places. http://lxr.mozilla.org/seamonkey/source/browser/installer/windows/nsis/shared.nsh#372
Attached patch Restore the good icon 2 - branch (obsolete) — Splinter Review
I also changed the comment about the Vista regkey, since VAL_URL_ICON is used for both XP and Vista, which I didn't notice the first time.
Attachment #257120 - Attachment is obsolete: true
Attachment #257440 - Flags: review?(robert.bugzilla)
Attachment #257120 - Flags: review?(robert.bugzilla)
Attached patch Restore the good icon 2 - trunk (obsolete) — Splinter Review
Attachment #257121 - Attachment is obsolete: true
not critical enough to take for 1.8.1.3, should take for 1.8.1.4 for sure.
Severity: normal → minor
Flags: blocking1.8.1.4?
Flags: blocking1.8.1.3?
Flags: blocking1.8.1.3-
Just FYI, I have the same problem in Windows XP SP2 with Firefox 2.0.0.2. When I change the icon manually using Windows' Folder Options -> File Types -> [select different URL file types] -> Advanced -> Change Icon, the next time I start Firefox it complains it is not the default browser anymore. If I click Yes in this dialog, the document icons are switched back to the wrong icon, the Firefox application icon.
Flags: blocking1.8.1.4? → blocking1.8.1.4+
Whiteboard: need review=rstrong
Attachment #257440 - Flags: approval1.8.1.4?
Thomas, there are several other places in shared.nsi that set the DefaultIcon... did you check if those need to be changed as well?
(In reply to comment #12) Do you mean shared.nsh ? If so, those lines don't change the icon for .url files. Anyway, it can't become worse than now, but it would be even better to be able to test it on the trunk.
Correct... shared.nsh Please take another look in shared.nsh... for example you fix it for one place the DefaultIcon is set for FirefoxURL but not in the other place where it is set: http://lxr.mozilla.org/seamonkey/source/browser/installer/windows/nsis/shared.nsh#372 and http://lxr.mozilla.org/seamonkey/source/browser/installer/windows/nsis/shared.nsh#152
Attached patch Restore the good icon 3 - branch (obsolete) — Splinter Review
You're right, there were still some things to change for FirefoxURL and the protocols, I didn't see them.
Attachment #257440 - Attachment is obsolete: true
Attachment #262045 - Flags: review?(robert.bugzilla)
Attachment #257440 - Flags: review?(robert.bugzilla)
Attachment #257440 - Flags: approval1.8.1.4?
Attached patch Restore the good icon 3 - trunk (obsolete) — Splinter Review
Attachment #257441 - Attachment is obsolete: true
Attachment #262045 - Flags: approval1.8.1.4?
Comment on attachment 262045 [details] [diff] [review] Restore the good icon 3 - branch Please wait until you've got reviews to request branch-landing approval. This bug is at risk of not making this release.
Attachment #262045 - Flags: approval1.8.1.4?
Comment on attachment 262046 [details] [diff] [review] Restore the good icon 3 - trunk >Index: components/shell/src/nsWindowsShellService.cpp >=================================================================== >RCS file: /cvsroot/mozilla/browser/components/shell/src/nsWindowsShellService.cpp,v >retrieving revision 1.44 >diff -u -r1.44 nsWindowsShellService.cpp >--- components/shell/src/nsWindowsShellService.cpp 23 Mar 2007 21:32:30 -0000 1.44 >+++ components/shell/src/nsWindowsShellService.cpp 18 Apr 2007 22:26:23 -0000 >@@ -162,7 +162,7 @@ > // HKCU\SOFTWARE\Classes\FirefoxURL\ (default) REG_SZ <appname> URL > // EditFlags REG_DWORD 2 > // FriendlyTypeName REG_SZ <appname> URL >-// DefaultIcon (default) REG_SZ <apppath>,0 >+// DefaultIcon (default) REG_SZ <apppath>,1 > // shell\open\command (default) REG_SZ <apppath> -url "%1" -requestPending > // shell\open\ddeexec (default) REG_SZ "%1",,0,0,,,, > // shell\open\ddeexec NoActivateHandler REG_SZ >@@ -176,7 +176,7 @@ > // are mapped like so: > // > // HKCU\SOFTWARE\Classes\<protocol>\ >-// DefaultIcon (default) REG_SZ <apppath>,0 >+// DefaultIcon (default) REG_SZ <apppath>,1 > // shell\open\command (default) REG_SZ <apppath> -url "%1" -requestPending > // shell\open\ddeexec (default) REG_SZ "%1",,0,0,,,, > // shell\open\ddeexec NoActivateHandler REG_SZ >@@ -231,7 +231,7 @@ > > #define CLS_HTML "FirefoxHTML" > #define CLS_URL "FirefoxURL" >-#define VAL_URL_ICON "%APPPATH%,0" >+#define VAL_URL_ICON "%APPPATH%,1" > #define VAL_FILE_ICON "%APPPATH%,1" > #define VAL_OPEN "\"%APPPATH%\" -url \"%1\" -requestPending" > Just remove VAL_URL_ICON and use VAL_FILE_ICON for all its occurences with that r=me
Attachment #262046 - Flags: review+
Comment on attachment 262045 [details] [diff] [review] Restore the good icon 3 - branch Resubmit this with the same changes as requested for the trunk patch and I'll r+ it. I want to see it first before +'ing it since this will go on the branch
Attachment #262045 - Flags: review?(robert.bugzilla)
Comment on attachment 262045 [details] [diff] [review] Restore the good icon 3 - branch robert wants a new patch
Attachment #262045 - Attachment is obsolete: true
Whiteboard: need review=rstrong → need new branch patch
Attachment #262686 - Flags: review?(robert.bugzilla)
Comment on attachment 262686 [details] [diff] [review] Restore the good icon 4 - branch Looks good and thanks!
Attachment #262686 - Flags: review?(robert.bugzilla) → review+
It seems I was very tired yesterday, I thought I added a comment, but don't know what happened. Anyway, here are the good patches.
Attachment #262046 - Attachment is obsolete: true
Comment on attachment 262686 [details] [diff] [review] Restore the good icon 4 - branch I wonder if there are still chances for it to make this release.
Attachment #262686 - Flags: approval1.8.1.4?
Comment on attachment 262687 [details] [diff] [review] Restore the good icon 4 - trunk I'll get this checked in
Attachment #262687 - Flags: review+
Checked in to trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: need new branch patch
Comment on attachment 262686 [details] [diff] [review] Restore the good icon 4 - branch approved for 1.8.1.4, a=dveditz for release-drivers
Attachment #262686 - Flags: approval1.8.1.4? → approval1.8.1.4+
Thomas, I'll get this checked in today.
Thank you, Robert. I tested the last trunk build and it works nicely, I was thinking that Firefox would ask to be set as default, but it doesn't.
If we are already default we automatically fix the key on install or on software update. Also, the reg key is no longer checked per bug 375114
Checked in to MOZILLA_1_8_BRANCH for Firefox 2.0.0.4
Keywords: fixed1.8.1.4
verified fixed 1.8.1.4 using RC 1 of 2004 Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.4) Gecko/2007050106 Firefox/2.0.0.4 - the page have now a Firefox icon on it. Adding verified keyword
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: