Win32 only - Bug 372236: Internet Shortcut (.url) icons are now icons of Firefox instead of a page with a Firefox icon on it. patch=Thomas Bertels tbertels@gmail.com, r=rob_strong